Fix chat with scrollbar

--- a/docs/pages/pro/ChatPage.css
+++ b/docs/pages/pro/ChatPage.css
@@ -21,7 +21,11 @@
   flex-direction: row-reverse;
 }
 
+.chat-room .scrollable-friends-list {
+  height: 580px;
+}
+
 .chat-room .scrollable-chat {
-  height: 510px;
-  padding-bottom: 15px;
+  height: 500px;
+  margin-bottom: 15px;
 }
